fix: update dark mode component

--- a/app/globals.css
+++ b/app/globals.css
@@ -86,7 +86,7 @@ body,
 }
 
 .dark {
-  --background: oklch(12.9% 0.042 264.695);
+  --background: oklch(11.264% 0.03748 263.133);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
   --card-foreground: oklch(0.985 0 0);
